crates/rumps-query/snapshots/scripts__387_array_sort_fn_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "fun main() {\n  write Array.sort([x => x, y => y])\n}\n"
---
ERROR: type mismatch: expected `Array[T]`, got `Json`
