crates/rumps-query/snapshots/scripts__388_range_module.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "fun main() {\n  write Range.contains(1, 1 .. 5)\n  write Range.contains(4, 1 .. 5)\n  write Range.contains(5, 1 .. 5)\n  write Range.contains(5, 1 ..= 5)\n\n  write Range.contains(5, 5 .. 1)\n  write Range.contains(2, 5 .. 1)\n  write Range.contains(1, 5 .. 1)\n  write Range.contains(1, 5 ..= 1)\n\n  write Range.contains(5, 5 .. 5)\n  write Range.contains(5, 5 ..= 5)\n\n  write Range.collect(Range.extend(2, 3 .. 7))\n  write Range.collect(Range.extend(2, 3 ..= 7))\n  write Range.collect(Range.extend(2, 7 .. 3))\n  write Range.collect(Range.extend(2, 7 ..= 3))\n  write Range.collect(Range.extend(2, 5 .. 5))\n  write Range.collect(Range.extend(2, 5 ..= 5))\n\n  write Range.is-empty(5 .. 5)\n  write Range.is-empty(5 ..= 5)\n  write Range.is-empty(1 .. 5)\n  write Range.is-empty(5 .. 1)\n\n  write Range.first(1 .. 5)\n  write Range.first(5 .. 1)\n  write Range.first(5 .. 5)\n  write Range.first(5 ..= 5)\n\n  write Range.last(1 .. 5)\n  write Range.last(1 ..= 5)\n  write Range.last(5 .. 1)\n  write Range.last(5 ..= 1)\n  write Range.last(5 .. 5)\n  write Range.last(5 ..= 5)\n}\n"
---
true
true
false
true
true
true
false
true
false
true
[ 1, 2, 3, 4, 5, 6, 7, 8 ]
[ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
[ 9, 8, 7, 6, 5, 4, 3, 2 ]
[ 9, 8, 7, 6, 5, 4, 3, 2, 1 ]
[ 3, 4, 5, 6, 7 ]
[ 3, 4, 5, 6, 7 ]
true
false
false
false
Option.Some(1)
Option.Some(5)
Option.None
Option.Some(5)
Option.Some(4)
Option.Some(5)
Option.Some(2)
Option.Some(1)
Option.None
Option.Some(5)
