crates/rumps-query/snapshots/scripts__389_range_extend_negative_err.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "fun main() {\n  write Range.extend(-1, 1 .. 5)\n}\n"
---
ERROR: type `Word` does not satisfy `Negatable` class
